# virtual_layer

./: README.md  meta_state.json  primitives.json  pyproject.toml  requirements.txt
tests/: test_dsl.py  test_executor.py  test_main.py  test_meta.py  test_optimizer.py  test_surrogate.py  test_symbolic.py
virtual_layer/: dsl.py  dsl_grammar.lark  executor.py  main.py  meta.py  optimizer.py  surrogate.py  symbolic.py
