[project]
name = "virtual_layer"
version = "0.1.0"
description = "A project demonstrating a virtual layer for something."
dependencies = [
    "numpy",
    "networkx", # Was already present
    "pytest",
    "flake8",
    "black",
    "isort",
    "scikit-learn",
    "pygraphviz" # Added
    # "lark-parser", # Removed
]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
